# btbkt

./: AGENTS.md  LICENSE  Makefile  README.md  pyproject.toml
docs/superpowers/plans/: 2026-06-23-btbkt-review-loop.md  2026-07-16-btbkt-review-status-and-skill-sync.md  2026-07-21-btbkt-repository-access.md
docs/superpowers/specs/: 2026-06-23-btbkt-review-loop-design.md  2026-07-16-btbkt-review-status-and-skill-sync-design.md  2026-07-21-btbkt-repository-access-design.md
scripts/: sync_skill.py
skills/using-btbkt-pr-workflows/: SKILL.md
skills/using-btbkt-pr-workflows/agents/: openai.yaml
src/btbkt/: __init__.py  __main__.py  cli.py  client.py  compact.py  context.py  repo_access.py
tests/: test_cli.py  test_client.py  test_compact.py  test_context.py  test_python_compat.py  test_repo_access.py  test_sync_skill.py
