[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "btbkt"
version = "0.1.0"
description = "Agent-friendly thin CLI for Bitbucket Data Center REST API pull request workflows."
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
btbkt = "btbkt.cli:console"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
