[build-system]
requires = ["setuptools>=77", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "btbkt"
dynamic = ["version"]
description = "Agent-friendly thin CLI for Bitbucket Data Center REST API pull request workflows."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Cuizi7" }]
keywords = [
    "agent",
    "bitbucket",
    "bitbucket-data-center",
    "bitbucket-server",
    "cli",
    "code-review",
    "pull-request",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Version Control :: Git",
    "Topic :: Utilities",
]
dependencies = []

[project.urls]
Homepage = "https://github.com/Cuizi7/btbkt"
Repository = "https://github.com/Cuizi7/btbkt"
Issues = "https://github.com/Cuizi7/btbkt/issues"

[project.scripts]
btbkt = "btbkt.cli:console"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
version_scheme = "guess-next-dev"
local_scheme = "no-local-version"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
